--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -7,6 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "format": "prettier --check \"**/*.+(js|ts|json|)\"",
+    "format:fix": "prettier --write \"**/*.+(js|ts|json|)\"",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -24,6 +26,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
