--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --check \"**/*.+(js|ts|json|)\"",
-    "format:fix": "prettier --write \"**/*.+(js|ts|json|)\"",
-    "preview": "vite preview"
+    "format:fix": "prettier --write \"**/*.+(js|ts|json|)\""
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -23,10 +23,13 @@
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
+    "sass": "^1.75.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
