feat(frontend): add prettier

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "format": "prettier --write \"**/*.+(js|ts|json|)\""
   },
   "dependencies": {
     "@tanstack/react-router": "^1.28.1",
@@ -24,9 +25,11 @@
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
     "sass": "^1.75.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
