--- a/apps/frontend/.prettierrc
+++ b/apps/frontend/.prettierrc
@@ -4,5 +4,11 @@
   "semi": true,
   "singleQuote": false,
   "trailingComma": "all",
-  "arrowParens": "always"
+  "arrowParens": "always",
+  "overrides": [
+    {
+      "files": ["tsconfig.json", "tsconfig.node.json"],
+      "options": { "parser": "json" }
+    }
+  ]
 }
