--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "frontend": "pnpm --filter @final_girl/frontend",
+    "ui:add": "pnpm --filter @final_girl/ui ui:add",
     "prepare": "husky install"
   },
   "devDependencies": {
