feat(frontend): add theming and header component

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -15,7 +15,8 @@
     "@final_girl/ui": "workspace:*",
     "@tanstack/react-router": "^1.28.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@tanstack/router-devtools": "^1.28.1",
