--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@final_girl/ui": "workspace:*",
+    "@final_girl/lib": "workspace:*",
     "@tanstack/react-router": "^1.28.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
